分离 shell 和 business 的混淆逻辑，充分尊重业务，  整体逻辑待测试